<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AuthorizationFragment">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login"
        android:ems="10"
        android:id="@+id/editTextLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintVertical_bias="0.352"
        android:autofillHints="username" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin" />

    <Button
        android:text="@string/log_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>